fix: refactoring